# translation_pipeline

./: .gitignore  README.md  merge_translation_outputs.py  pyproject.toml  translate_datatrove.py  validate_datatrove_output.py
translation_pipeline/: __init__.py  cli.py  general_logic.py  logic.py  longbench_logic.py  pipeline_ops.py  ruler_logic.py
